# typr

./: .gitignore  LICENSE  README.md  install.sh  pyproject.toml
resources/: org.typr.desktop  typr.desktop
src/typr/: __init__.py  __main__.py  app.py  config.py
src/typr/core/: __init__.py  audio_recorder.py  hotkey_manager.py  text_injector.py  transcriber.py
src/typr/ui/: __init__.py  settings_dialog.py  tray_icon.py
src/typr/utils/: __init__.py  logger.py
tests/: __init__.py
